--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,17 @@ flutter:
   assets:
     - assets/img/
     - assets/json/
+  
+  fonts:
+    - family: NinbusSans
+      fonts:
+        - asset: assets/fonts/NimbusSans/NimbusSanL-Reg.otf
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto/Roboto-Regular.ttf
+        - asset: assets/fonts/Roboto/Roboto-Bold.ttf
+          weight: 700
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
